Add the Features section to the home page with translation support.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -26,5 +26,15 @@
     "Connect with verified electricians, plumbers, carpenters, and more. Book services instantly and get your home issues fixed by professionals.": "تواصل مع كهربائيين وسباكين ونجّارين معتمدين والمزيد. احجز الخدمات فورًا واحصل على حلول لمشكلات منزلك على يد محترفين.",
     "Browse Technicians": "استكشاف الفنيين",
     "Sign Up Now": "انشاء حساب جديد"
+  },
+  "HomeFeatures":{
+    "Why Choose Salahly?": "لماذا تختار صلح لي؟",
+    "We make it easy to find and book trusted service providers in your area": "نحن نجعل من السهل العثور على وحجز مقدمي الخدمات الموثقين في منطقتك",
+    "Verified Professionals": "الخدمات الموثقين",
+    "All service providers are verified and rated by customers": "جميع مقدمي الخدمات موثقين ومعتمدين من قبل العملاء",
+    "Instant Booking": "حجز فوري",
+    "Book services quickly and easily with just a few clicks": "احجز الخدمات بسرعة وسهولة ببضع نقرات فقط",
+    "Direct Communication": "التواصل المباشر",
+    "Chat or call technicians directly to discuss your service needs": "اتصل بالفنيين مباشرة لمناقشة حاجاتك الخدمية"
   }
 }
