--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -26,5 +26,15 @@
     "Connect with verified electricians, plumbers, carpenters, and more. Book services instantly and get your home issues fixed by professionals.": "Connect with verified electricians, plumbers, carpenters, and more. Book services instantly and get your home issues fixed by professionals.",
     "Browse Technicians": "Browse Technicians",
     "Sign Up Now": "Sign Up Now"
+  },
+  "HomeFeatures":{
+    "Why Choose Salahly?": "Why Choose Salahly?",
+    "We make it easy to find and book trusted service providers in your area": "We make it easy to find and book trusted service providers in your area",
+    "Verified Professionals": "Verified Professionals",
+    "All service providers are verified and rated by customers": "All service providers are verified and rated by customers",
+    "Instant Booking": "Instant Booking",
+    "Book services quickly and easily with just a few clicks": "Book services quickly and easily with just a few clicks",
+    "Direct Communication": "Direct Communication",
+    "Chat or call technicians directly to discuss your service needs": "Chat or call technicians directly to discuss your service needs"
   }
 }
