--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -46,5 +46,24 @@
     "Certified electricians for all your needs": "Certified electricians for all your needs",
     "Trusted plumbers for home repairs": "Trusted plumbers for home repairs",
     "Skilled carpenters for furniture & repairs": "Skilled carpenters for furniture & repairs"
+  },
+  "Footer":{
+    "Salahly":"Salahly",
+    "Quick Links":"Quick Links",
+    "Services":"Services",
+    "Contact Us":"Contact Us",
+    "Connecting customers with trusted service providers across Egypt.": "Connecting customers with trusted service providers across Egypt.",
+    "© 2025 Salahly. All rights reserved.": "© 2025 Salahly. All rights reserved.",
+    "Cairo, Egypt":"Cairo, Egypt",
+    "Electrician":"Electrician",
+    "Plumber":"Plumber",
+    "Carpenter":"Carpenter",
+    "Painter":"Painter",
+    "HVAC Specialist":"HVAC Specialist",
+    "Locksmith":"Locksmith",
+    "Home":"Home",
+    "Browse Technicals":"Browse Technicals",
+    "Login":"Login",
+    "Sign Up":"Sign Up"
   }
 }
