Implement the registration page for customer and technician accounts.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -79,5 +79,51 @@
     "Login as Admin":"تسجيل الدخول كمدير",
     "Don't have an account?":"ليس لديك حساب؟",
     "signup":"انشاء حساب"
+  },
+  "Signup":{
+    "Create Account":"انشاء حساب",
+    "Choose your account type to get started":"اختر نوع حسابك للبدء",
+    "Customer":"عميل",
+    "Technician":"فني",
+    "Email":"البريد الالكتروني",
+    "Password":"كلمة المرور",
+    "Signup as Customer":"انشاء حساب كعميل",
+    "Signup as Technician":"انشاء حساب كفني",
+    "Your account will be reviewed before activation":" سيتم مراجعة حسابك قبل التفعيل",
+    "Already have an account?":"هل لديك حساب؟",
+    "login":"تسجيل الدخول",
+    "Full Name":"الاسم الكامل",
+    "Enter your full name":"أدخل اسمك الكامل",
+    "Full name is required":"الاسم الكامل مطلوب",
+    "Valid email is required":"البريد الإلكتروني الصحيح مطلوب",
+    "Password must be at least 6 characters":"يجب أن تكون كلمة المرور 6 أحرف على الأقل",
+    "Phone Number":"رقم الهاتف",
+    "Enter 11 digit phone number":"أدخل رقم هاتف مكون من 11 رقمًا",
+    "Enter a valid 11-digit Egyptian phone number.":"أدخل رقم مصري صحيح مكون من 11 رقمًا",
+    "Date of Birth":"تاريخ الميلاد",
+    "Date of birth is required":"تاريخ الميلاد مطلوب",
+    "City":"المدينة",
+    "Enter your city":"أدخل مدينتك",
+    "City is required":"المدينة مطلوبة",
+    "Area":"المنطقة",
+    "Enter your area":"أدخل منطقتك",
+    "Area is required":"المنطقة مطلوبة",
+    "Address":"العنوان",
+    "Enter your full address":"أدخل عنوانك الكامل",
+    "Address is required":"العنوان مطلوب",
+    "Profile Image URL":"رابط صورة الملف الشخصي",
+    "Optional":"اختياري",
+    "Enter image URL":"أدخل رابط الصورة",
+    "Bio":"السيرة الذاتية",
+    "Tell us about your experience and skills":"أخبرنا عن خبرتك ومهاراتك",
+    "Bio is required":"السيرة الذاتية مطلوبة",
+    "Years of Experience":"سنوات الخبرة",
+    "Enter years of experience":"أدخل سنوات الخبرة",
+    "Years of experience is required":"سنوات الخبرة مطلوبة",
+    "Service Areas":"مناطق الخدمة",
+    "Enter city":"أدخل المدينة",
+    "Enter area":"أدخل المنطقة",
+    "Remove":"إزالة",
+    "Add Another Service Area":"إضافة منطقة خدمة أخرى"
   }
 }
