--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -79,5 +79,51 @@
     "Login as Admin":"Login as Admin",
     "Don't have an account?":"Don't have an account?",
     "signup":"signup"
+  },
+  "Signup":{
+    "Create Account":"Create Account",
+    "Choose your account type to get started":"Choose your account type to get started",
+    "Customer":"Customer",
+    "Technician":"Technician",
+    "Email":"Email",
+    "Password":"Password",
+    "Signup as Customer":"Signup as Customer",
+    "Signup as Technician":"Signup as Technician",
+    "Your account will be reviewed before activation":"Your account will be reviewed before activation",
+    "Already have an account?":"Already have an account?",
+    "login":"login",
+    "Full Name":"Full Name",
+    "Enter your full name":"Enter your full name",
+    "Full name is required":"Full name is required",
+    "Valid email is required":"Valid email is required",
+    "Password must be at least 6 characters":"Password must be at least 6 characters",
+    "Phone Number":"Phone Number",
+    "Enter 11 digit phone number":"Enter 11 digit phone number",
+    "Enter a valid 11-digit Egyptian phone number.":"Enter a valid 11-digit Egyptian phone number.",
+    "Date of Birth":"Date of Birth",
+    "Date of birth is required":"Date of birth is required",
+    "City":"City",
+    "Enter your city":"Enter your city",
+    "City is required":"City is required",
+    "Area":"Area",
+    "Enter your area":"Enter your area",
+    "Area is required":"Area is required",
+    "Address":"Address",
+    "Enter your full address":"Enter your full address",
+    "Address is required":"Address is required",
+    "Profile Image URL":"Profile Image URL",
+    "Optional":"Optional",
+    "Enter image URL":"Enter image URL",
+    "Bio":"Bio",
+    "Tell us about your experience and skills":"Tell us about your experience and skills",
+    "Bio is required":"Bio is required",
+    "Years of Experience":"Years of Experience",
+    "Enter years of experience":"Enter years of experience",
+    "Years of experience is required":"Years of experience is required",
+    "Service Areas":"Service Areas",
+    "Enter city":"Enter city",
+    "Enter area":"Enter area",
+    "Remove":"Remove",
+    "Add Another Service Area":"Add Another Service Area"
   }
 }
