Improve login and signup designs, wire them to Auth APIs, and ensure proper routing and layout for technician users.

--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -20,6 +20,11 @@
     "Login": "Login",
     "Sign Up": "Sign Up"
   },
+  "TechnicianNav":{
+    "Profile": "Profile",
+    "Portfolio": "Portfolio",
+    "Logout": "Logout"
+  },
   "HomeBanner":{
     "Find Trusted Service Providers": "Find Trusted Service Providers",
     "Salahly": "Salahly",
@@ -68,15 +73,12 @@
   },
   "Login":{
     "Login":"Login",
-    "Choose your account type to login":"Choose your account type to login",
-    "Customer":"Customer",
-    "Technician":"Technician",
-    "Admin":"Admin",
-    "Email":"Email",
+    "Username":"Username",
     "Password":"Password",
-    "Login as Customer":"Login as Customer",
-    "Login as Technician":"Login as Technician",
-    "Login as Admin":"Login as Admin",
+    "Forgot password?":"Forgot password?",
+    "Welcome back":"Welcome back",
+    "Sign in to your account":"Sign in to your account",
+    "Enter your account details below to continue.":"Enter your account details below to continue.",
     "Don't have an account?":"Don't have an account?",
     "signup":"signup"
   },
@@ -97,34 +99,11 @@
     "Full name is required":"Full name is required",
     "Valid email is required":"Valid email is required",
     "Password must be at least 6 characters":"Password must be at least 6 characters",
-    "Phone Number":"Phone Number",
-    "Enter 11 digit phone number":"Enter 11 digit phone number",
-    "Enter a valid 11-digit Egyptian phone number.":"Enter a valid 11-digit Egyptian phone number.",
-    "Date of Birth":"Date of Birth",
-    "Date of birth is required":"Date of birth is required",
-    "City":"City",
-    "Enter your city":"Enter your city",
-    "City is required":"City is required",
-    "Area":"Area",
-    "Enter your area":"Enter your area",
-    "Area is required":"Area is required",
-    "Address":"Address",
-    "Enter your full address":"Enter your full address",
-    "Address is required":"Address is required",
-    "Profile Image URL":"Profile Image URL",
-    "Optional":"Optional",
-    "Enter image URL":"Enter image URL",
-    "Bio":"Bio",
-    "Tell us about your experience and skills":"Tell us about your experience and skills",
-    "Bio is required":"Bio is required",
-    "Years of Experience":"Years of Experience",
-    "Enter years of experience":"Enter years of experience",
-    "Years of experience is required":"Years of experience is required",
-    "Service Areas":"Service Areas",
-    "Enter city":"Enter city",
-    "Enter area":"Enter area",
-    "Remove":"Remove",
-    "Add Another Service Area":"Add Another Service Area"
+    "User Type":"User Type",
+    "Choose your user type":"Choose your user type",
+    "Username":"Username",
+    "Enter your username":"Enter your username",
+    "Username is required":"Username is required"
   },
   "BrowseTechnicians":{
     "Browse Service Providers":"Browse Service Providers",
