--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -20,6 +20,11 @@
     "Login": "تسجيل الدخول",
     "Sign Up": "انشاء حساب"
   },
+  "TechnicianNav":{
+    "Profile": "الملف الشخصي",
+    "Portfolio": "معرض الأعمال",
+    "Logout": "تسجيل الخروج"
+  },
   "HomeBanner":{
     "Find Trusted Service Providers": "ابحث عن مقدمي الخدمات الموثقين",
     "Salahly": "صلح لي",
@@ -68,15 +73,12 @@
   },
   "Login":{
     "Login":"تسجيل الدخول",
-    "Choose your account type to login":"اختر نوع حسابك للدخول",
-    "Customer":"عميل",
-    "Technician":"فني",
-    "Admin":"مدير",
-    "Email":"البريد الالكتروني",
+    "Username":"اسم المستخدم",
     "Password":"كلمة المرور",
-    "Login as Customer":"تسجيل الدخول كعميل",
-    "Login as Technician":"تسجيل الدخول كفني",
-    "Login as Admin":"تسجيل الدخول كمدير",
+    "Forgot password?":"نسيت كلمة المرور؟",
+    "Welcome back":"مرحبا بك",
+    "Sign in to your account":"تسجيل الدخول إلى حسابك",
+    "Enter your account details below to continue.":"أدخل تفاصيل حسابك أدناه للإستمرار.",
     "Don't have an account?":"ليس لديك حساب؟",
     "signup":"انشاء حساب"
   },
@@ -97,34 +99,11 @@
     "Full name is required":"الاسم الكامل مطلوب",
     "Valid email is required":"البريد الإلكتروني الصحيح مطلوب",
     "Password must be at least 6 characters":"يجب أن تكون كلمة المرور 6 أحرف على الأقل",
-    "Phone Number":"رقم الهاتف",
-    "Enter 11 digit phone number":"أدخل رقم هاتف مكون من 11 رقمًا",
-    "Enter a valid 11-digit Egyptian phone number.":"أدخل رقم مصري صحيح مكون من 11 رقمًا",
-    "Date of Birth":"تاريخ الميلاد",
-    "Date of birth is required":"تاريخ الميلاد مطلوب",
-    "City":"المدينة",
-    "Enter your city":"أدخل مدينتك",
-    "City is required":"المدينة مطلوبة",
-    "Area":"المنطقة",
-    "Enter your area":"أدخل منطقتك",
-    "Area is required":"المنطقة مطلوبة",
-    "Address":"العنوان",
-    "Enter your full address":"أدخل عنوانك الكامل",
-    "Address is required":"العنوان مطلوب",
-    "Profile Image URL":"رابط صورة الملف الشخصي",
-    "Optional":"اختياري",
-    "Enter image URL":"أدخل رابط الصورة",
-    "Bio":"السيرة الذاتية",
-    "Tell us about your experience and skills":"أخبرنا عن خبرتك ومهاراتك",
-    "Bio is required":"السيرة الذاتية مطلوبة",
-    "Years of Experience":"سنوات الخبرة",
-    "Enter years of experience":"أدخل سنوات الخبرة",
-    "Years of experience is required":"سنوات الخبرة مطلوبة",
-    "Service Areas":"مناطق الخدمة",
-    "Enter city":"أدخل المدينة",
-    "Enter area":"أدخل المنطقة",
-    "Remove":"إزالة",
-    "Add Another Service Area":"إضافة منطقة خدمة أخرى"
+    "User Type":"نوع المستخدم",
+    "Choose your user type":"اختر نوع المستخدم",
+    "Username":"اسم المستخدم",
+    "Enter your username":"أدخل اسم المستخدم",
+    "Username is required":"اسم المستخدم مطلوب"
   },
   "BrowseTechnicians":{
     "Browse Service Providers":"استكشاف مقدمي الخدمات",
