Add a full Customer Profile page and layout, include a Customer Guard, and update controller methods to handle image uploads through FormData.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -25,6 +25,12 @@
     "Portfolio": "معرض الأعمال",
     "Logout": "تسجيل الخروج"
   },
+  "CustomerNav":{
+    "Profile":"الملف الشخصي",
+    "Requests":"الطلبات",
+    "Logout":"تسجيل الخروج",
+    "CustomerLabel":"عميل"
+  },
   "HomeBanner":{
     "Find Trusted Service Providers": "ابحث عن مقدمي الخدمات الموثقين",
     "Salahly": "صلح لي",
